--- a/.classpath
+++ b/.classpath
@@ -1,7 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
 	<classpathentry kind="src" path="src"/>
+	<classpathentry kind="src" path="Imagenes"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.6"/>
+	<classpathentry kind="lib" path="C:/Users/David7Garcia/Desktop/ProyectoISW1-Maestro_Final/miglayout15-swing.jar"/>
+	<classpathentry exported="true" kind="lib" path="C:/Users/David7Garcia/Desktop/ProyectoISW1-Maestro_Final/mysql-connector-java-5.1.17-bin.jar"/>
 	<classpathentry kind="lib" path="mysql-connector-java-5.1.17-bin.jar"/>
 	<classpathentry kind="lib" path="miglayout15-swing.jar" sourcepath="miglayout-src.zip"/>
 	<classpathentry kind="lib" path="C:/Users/David7Garcia/Desktop/crud/mysql-connector-java-5.1.17-bin.jar"/>
